@@ -31,8 +31,8 @@ import com.graphhopper.jsprit.core.problem.solution.route.VehicleRoute;
 import com.graphhopper.jsprit.core.problem.vehicle.Vehicle;
 import com.graphhopper.jsprit.core.problem.vehicle.VehicleImpl;
 import com.graphhopper.jsprit.core.problem.vehicle.VehicleTypeImpl;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.matsim.api.core.v01.Id;
 import org.matsim.api.core.v01.network.Link;
 import org.matsim.api.core.v01.network.Network;
@@ -48,40 +48,38 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.not;
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class MatsimTransformerTest {
 
-	@Rule
-	public MatsimTestUtils testUtils = new MatsimTestUtils();
+	@RegisterExtension
+	private MatsimTestUtils testUtils = new MatsimTestUtils();
 
 	@Test
-	public void whenTransforming_jSpritType2matsimType_itIsMadeCorrectly() {
+	void whenTransforming_jSpritType2matsimType_itIsMadeCorrectly() {
 		com.graphhopper.jsprit.core.problem.vehicle.VehicleType jspritType = VehicleTypeImpl.Builder
 				.newInstance("myType").addCapacityDimension(0, 50).setCostPerDistance(10.0).setCostPerTransportTime(5.0)
 				.setFixedCost(100.0).build();
 		VehicleType matsimType = MatsimJspritFactory.createMatsimVehicleType(jspritType);
 		assertNotNull(matsimType);
 		assertEquals("myType", matsimType.getId().toString());
-		assertEquals(50., (double) matsimType.getCapacity().getWeightInTons(), Double.MIN_VALUE);
+		assertEquals(50., matsimType.getCapacity().getWeightInTons(), Double.MIN_VALUE);
 		assertEquals(10.0, matsimType.getCostInformation().getCostsPerMeter(), 0.01);
 		assertEquals(5.0, matsimType.getCostInformation().getCostsPerSecond(), 0.01);
 		assertEquals(100.0, matsimType.getCostInformation().getFixedCosts(), 0.01);
 	}
 
 	@Test
-	public void whenTransforming_jSpritType2matsimType_withCaching_itIsNotCached() {
+	void whenTransforming_jSpritType2matsimType_withCaching_itIsNotCached() {
 		com.graphhopper.jsprit.core.problem.vehicle.VehicleType jspritType = VehicleTypeImpl.Builder
 				.newInstance("myType").addCapacityDimension(0, 50).setCostPerDistance(10.0).setCostPerTransportTime(5.0)
 				.setFixedCost(100.0).build();
 		VehicleType matsimType = MatsimJspritFactory.createMatsimVehicleType(jspritType);
-		assertThat(matsimType, is(not(MatsimJspritFactory.createMatsimVehicleType(jspritType))));
+		assertNotEquals(matsimType, MatsimJspritFactory.createMatsimVehicleType(jspritType));
 	}
 
 	@Test
-	public void whenTransforming_matsimType2jSpritType_itIsMadeCorrectly() {
+	void whenTransforming_matsimType2jSpritType_itIsMadeCorrectly() {
 		VehicleType matsimType = getMatsimVehicleType();
 		com.graphhopper.jsprit.core.problem.vehicle.VehicleType jspritType = MatsimJspritFactory
 				.createJspritVehicleType(matsimType);
@@ -93,7 +91,7 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void whenTransforming_jspritVehicle2matsimVehicle_itIsMadeCorrectly() {
+	void whenTransforming_jspritVehicle2matsimVehicle_itIsMadeCorrectly() {
 		com.graphhopper.jsprit.core.problem.vehicle.VehicleType jspritType = VehicleTypeImpl.Builder
 				.newInstance("myType").addCapacityDimension(0, 50).setCostPerDistance(10.0).setCostPerTransportTime(5.0)
 				.setFixedCost(100.0).build();
@@ -109,7 +107,7 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void whenTransforming_matsimVehicle2jspritVehicle_itIsMadeCorrectly() {
+	void whenTransforming_matsimVehicle2jspritVehicle_itIsMadeCorrectly() {
 		VehicleType matsimType = getMatsimVehicleType();
 		CarrierVehicle matsimVehicle = getMatsimVehicle("matsimVehicle", "loc", matsimType);
 		Vehicle jspritVehicle = MatsimJspritFactory.createJspritVehicle(matsimVehicle, null);
@@ -122,7 +120,7 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void whenTransforming_matsimService2jspritService_isMadeCorrectly() {
+	void whenTransforming_matsimService2jspritService_isMadeCorrectly() {
 		CarrierService carrierService = CarrierService.Builder
 				.newInstance(Id.create("serviceId", CarrierService.class), Id.create("locationId", Link.class))
 				.setCapacityDemand(50).setServiceDuration(30.0)
@@ -135,12 +133,12 @@ public class MatsimTransformerTest {
 		assertEquals(10.0, service.getTimeWindow().getStart(), 0.01);
 
 		Service service2 = MatsimJspritFactory.createJspritService(carrierService, null);
-		assertTrue(service != service2);
-		assertTrue(service.equals(service2));
+		assertNotSame(service, service2);
+		assertEquals(service, service2);
 	}
 
 	@Test
-	public void whenTransforming_jspritService2matsimService_isMadeCorrectly() {
+	void whenTransforming_jspritService2matsimService_isMadeCorrectly() {
 		Service carrierService = Service.Builder.newInstance("serviceId").addSizeDimension(0, 50)
 				.setLocation(Location.newInstance("locationId")).setServiceTime(30.0)
 				.setTimeWindow(
@@ -155,12 +153,12 @@ public class MatsimTransformerTest {
 		assertEquals(10.0, service.getServiceStartTimeWindow().getStart(), 0.01);
 
 		CarrierService service2 = MatsimJspritFactory.createCarrierService(carrierService);
-		assertTrue(service != service2);
-		assertTrue(service.equals(service2));
+		assertNotSame(service, service2);
+		assertEquals(service, service2);
 	}
 
 	@Test
-	public void whenTransforming_matsimShipment2jspritShipment_isMadeCorrectly() {
+	void whenTransforming_matsimShipment2jspritShipment_isMadeCorrectly() {
 		CarrierShipment carrierShipment = CarrierShipment.Builder
 				.newInstance(Id.create("ShipmentId", CarrierShipment.class), Id.createLinkId("PickupLocationId"),
 						Id.createLinkId("DeliveryLocationId"), 50)
@@ -179,12 +177,12 @@ public class MatsimTransformerTest {
 		assertEquals(50, shipment.getSize().get(0));
 
 		Shipment shipment2 = MatsimJspritFactory.createJspritShipment(carrierShipment);
-		assertTrue(shipment != shipment2);
-		assertTrue(shipment.equals(shipment2));
+		assertNotSame(shipment, shipment2);
+		assertEquals(shipment, shipment2);
 	}
 
 	@Test
-	public void whenTransforming_jspritShipment2matsimShipment_isMadeCorrectly() {
+	void whenTransforming_jspritShipment2matsimShipment_isMadeCorrectly() {
 		Shipment shipment = Shipment.Builder.newInstance("shipmentId").addSizeDimension(0, 50)
 				.setPickupLocation(Location.newInstance("PickupLocationId")).setPickupServiceTime(30.0)
 				.setPickupTimeWindow(
@@ -207,12 +205,12 @@ public class MatsimTransformerTest {
 		assertEquals(50, carrierShipment.getSize());
 
 		CarrierShipment carrierShipment2 = MatsimJspritFactory.createCarrierShipment(shipment);
-		assertTrue(carrierShipment != carrierShipment2);
-		assertTrue(carrierShipment.equals(carrierShipment2));
+		assertNotSame(carrierShipment, carrierShipment2);
+		assertEquals(carrierShipment, carrierShipment2);
 	}
 
 	@Test
-	public void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_routeStartMustBe15() {
+	void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_routeStartMustBe15() {
 		ScheduledTour sTour = getMatsimServiceTour();
 
 		VehicleRoutingProblem vrp = getVehicleRoutingProblem(sTour);
@@ -230,7 +228,7 @@ public class MatsimTransformerTest {
 	}
 
 	private Collection<? extends Job> getJobsFrom(ScheduledTour sTour) {
-		Collection<Service> services = new ArrayList<Service>();
+		Collection<Service> services = new ArrayList<>();
 		for (Tour.TourElement e : sTour.getTour().getTourElements()) {
 			if (e instanceof Tour.TourActivity) {
 				if (e instanceof Tour.ServiceActivity) {
@@ -252,7 +250,7 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_routeAndVehicleMustNotBeNull() {
+	void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_routeAndVehicleMustNotBeNull() {
 		ScheduledTour sTour = getMatsimServiceTour();
 		VehicleRoutingProblem vehicleRoutingProblem = getVehicleRoutingProblem(sTour);
 		VehicleRoute route = MatsimJspritFactory.createRoute(sTour, vehicleRoutingProblem);
@@ -261,7 +259,7 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_vehicleMustHaveTheCorrectId() {
+	void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_vehicleMustHaveTheCorrectId() {
 		ScheduledTour sTour = getMatsimServiceTour();
 		VehicleRoutingProblem vehicleRoutingProblem = getVehicleRoutingProblem(sTour);
 		VehicleRoute route = MatsimJspritFactory.createRoute(sTour, vehicleRoutingProblem);
@@ -269,7 +267,7 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_earliestStartMustBe10() {
+	void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_earliestStartMustBe10() {
 		ScheduledTour sTour = getMatsimServiceTour();
 		VehicleRoutingProblem vehicleRoutingProblem = getVehicleRoutingProblem(sTour);
 		VehicleRoute route = MatsimJspritFactory.createRoute(sTour, vehicleRoutingProblem);
@@ -277,7 +275,7 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_latestEndMustBe20() {
+	void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_latestEndMustBe20() {
 		ScheduledTour sTour = getMatsimServiceTour();
 		VehicleRoutingProblem vehicleRoutingProblem = getVehicleRoutingProblem(sTour);
 		VehicleRoute route = MatsimJspritFactory.createRoute(sTour, vehicleRoutingProblem);
@@ -285,7 +283,7 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_sizeOfTourMustBe2() {
+	void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_sizeOfTourMustBe2() {
 		ScheduledTour sTour = getMatsimServiceTour();
 		VehicleRoutingProblem vehicleRoutingProblem = getVehicleRoutingProblem(sTour);
 		VehicleRoute route = MatsimJspritFactory.createRoute(sTour, vehicleRoutingProblem);
@@ -293,15 +291,15 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_firstActIdMustBeCorrect() {
+	void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_firstActIdMustBeCorrect() {
 		ScheduledTour sTour = getMatsimServiceTour();
 		VehicleRoutingProblem vehicleRoutingProblem = getVehicleRoutingProblem(sTour);
 		VehicleRoute route = MatsimJspritFactory.createRoute(sTour, vehicleRoutingProblem);
-		assertEquals("to1", route.getTourActivities().getActivities().get(0).getLocation().getId());
+		assertEquals("to1", route.getTourActivities().getActivities().getFirst().getLocation().getId());
 	}
 
 	@Test
-	public void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_secondActIdMustBeCorrect() {
+	void whenTransforming_matsimScheduledTourWithServiceAct2vehicleRoute_secondActIdMustBeCorrect() {
 		ScheduledTour sTour = getMatsimServiceTour();
 		VehicleRoutingProblem vehicleRoutingProblem = getVehicleRoutingProblem(sTour);
 		VehicleRoute route = MatsimJspritFactory.createRoute(sTour, vehicleRoutingProblem);
@@ -309,8 +307,8 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void whenTransforming_matsimPlan2vehicleRouteSolution_itIsMadeCorrectly() {
-		List<ScheduledTour> sTours = new ArrayList<ScheduledTour>();
+	void whenTransforming_matsimPlan2vehicleRouteSolution_itIsMadeCorrectly() {
+		List<ScheduledTour> sTours = new ArrayList<>();
 		ScheduledTour matsimTour = getMatsimTour("matsimVehicle");
 		sTours.add(matsimTour);
 		ScheduledTour matsimTour1 = getMatsimTour("matsimVehicle1");
@@ -404,12 +402,7 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	public void createVehicleRoutingProblemWithServices_isMadeCorrectly() {
-		// TODO create
-	}
-
-	@Test
-	public void createVehicleRoutingProblemBuilderWithServices_isMadeCorrectly() {
+	void createVehicleRoutingProblemBuilderWithServices_isMadeCorrectly() {
 		Carrier carrier = createCarrierWithServices();
         Network network = NetworkUtils.createNetwork();
 		new MatsimNetworkReader(network).readFile(testUtils.getClassInputDirectory() + "grid-network.xml");
@@ -425,7 +418,7 @@ public class MatsimTransformerTest {
 		assertEquals("i(6,0)", vehicle.getStartLocation().getId());
 		assertEquals(10.0, vehicle.getEarliestDeparture(), 0.0);
 		assertEquals(20.0, vehicle.getLatestArrival(), 0.0);
-		assertEquals("matsimType", vehicle.getType().getTypeId().toString());
+		assertEquals("matsimType", vehicle.getType().getTypeId());
 		assertEquals(10.0, vehicle.getType().getVehicleCostParams().perDistanceUnit, 0.0);
 		assertEquals(5.0, vehicle.getType().getVehicleCostParams().perTransportTimeUnit, 0.0);
 		assertEquals(100.0, vehicle.getType().getVehicleCostParams().fix, 0.0);
@@ -438,31 +431,26 @@ public class MatsimTransformerTest {
 		assertNotNull(jobS1);
 		assertEquals("serviceId", jobS1.getId());
 		assertEquals(20, jobS1.getSize().get(0));
-		assertTrue(jobS1 instanceof Service);
+		assertInstanceOf(Service.class, jobS1);
 		Service service1 = (Service) jobS1;
 		assertEquals(20, service1.getSize().get(0));
 		assertEquals(10.0, service1.getServiceDuration(), 0.0);
-		assertEquals("i(7,4)R", service1.getLocation().getId().toString());
+		assertEquals("i(7,4)R", service1.getLocation().getId());
 
 		Job jobS2 = vrp.getJobs().get("serviceId2");
 		assertNotNull(jobS2);
 		assertEquals("serviceId2", jobS2.getId());
 		assertEquals(10, jobS2.getSize().get(0));
-		assertTrue(jobS2 instanceof Service);
+		assertInstanceOf(Service.class, jobS2);
 		Service service2 = (Service) jobS2;
 		assertEquals(10, service2.getSize().get(0));
 		assertEquals(20.0, service2.getServiceDuration(), 0.0);
-		assertEquals("i(3,9)", service2.getLocation().getId().toString());
+		assertEquals("i(3,9)", service2.getLocation().getId());
 	}
 
+	//	@Disabled		//Set to ignore due to not implemented functionality of Shipments in MatsimJspritFactory
 	@Test
-	public void createVehicleRoutingProblemWithShipments_isMadeCorrectly() {
-		// TODO create
-	}
-
-	@Test
-//	@Ignore		//Set to ignore due to not implemented functionality of Shipments in MatsimJspritFactory
-	public void createVehicleRoutingProblemBuilderWithShipments_isMadeCorrectly() {
+	void createVehicleRoutingProblemBuilderWithShipments_isMadeCorrectly() {
         Carrier carrier = createCarrierWithShipments();
         Network network = NetworkUtils.createNetwork();
 		new MatsimNetworkReader(network).readFile(testUtils.getClassInputDirectory() + "grid-network.xml");
@@ -478,7 +466,7 @@ public class MatsimTransformerTest {
 		assertEquals("i(6,0)", vehicle.getStartLocation().getId());
 		assertEquals(10.0, vehicle.getEarliestDeparture(), 0.0);
 		assertEquals(20.0, vehicle.getLatestArrival(), 0.0);
-		assertEquals("matsimType", vehicle.getType().getTypeId().toString());
+		assertEquals("matsimType", vehicle.getType().getTypeId());
 		assertEquals(10.0, vehicle.getType().getVehicleCostParams().perDistanceUnit, 0.0);
 		assertEquals(5.0, vehicle.getType().getVehicleCostParams().perTransportTimeUnit, 0.0);
 		assertEquals(100.0, vehicle.getType().getVehicleCostParams().fix, 0.0);
@@ -491,7 +479,7 @@ public class MatsimTransformerTest {
 		assertNotNull(jobS1);
 		assertEquals("shipment1", jobS1.getId());
 		assertEquals(10, jobS1.getSize().get(0));
-		assertTrue(jobS1 instanceof Shipment);
+		assertInstanceOf(Shipment.class, jobS1);
 		Shipment shipment1 = (Shipment) jobS1;
 		assertEquals(10, shipment1.getSize().get(0));
 		assertEquals("i(6,0)", shipment1.getPickupLocation().getId());
@@ -507,10 +495,10 @@ public class MatsimTransformerTest {
 		assertNotNull(jobS2);
 		assertEquals("shipment2", jobS2.getId());
 		assertEquals(20, jobS2.getSize().get(0));
-		assertTrue(jobS2 instanceof Shipment);
+		assertInstanceOf(Shipment.class, jobS2);
 		Shipment shipment2 = (Shipment) jobS2;
 		assertEquals(20, shipment2.getSize().get(0));
-		assertEquals("i(3,9)", shipment2.getDeliveryLocation().getId().toString());
+		assertEquals("i(3,9)", shipment2.getDeliveryLocation().getId());
 	}
 
 	private Carrier createCarrierWithServices() {
